[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4", features = ["chrono_0_4"] }
